--- a/src/scss/pages/new-memory.scss
+++ b/src/scss/pages/new-memory.scss
@@ -8,6 +8,7 @@
 @import '../../../node_modules/cropperjs/dist/cropper.min';
 @import '../new-memory/step-1';
 @import '../new-memory/step-2';
+@import '../new-memory/step-2-military';
 @import '../new-memory/step-3';
 @import '../new-memory/step-3-military';
 @import '../new-memory/step-4';
