upd: UAF font family on steps; steps titles logic military/civil; last step photo.

--- a/src/scss/new-memory/step-2.scss
+++ b/src/scss/new-memory/step-2.scss
@@ -125,6 +125,7 @@ body.memory-page-theme-military {
 			display: none;
 			order: 2;
 			color: $white;
+			font-family: 'UAF Memory', serif;
 			font-size: $fs-sm;
 			line-height: $lh-fs-14;
 			font-weight: $fw-medium;
