--- a/src/scss/new-memory/step-6-military.scss
+++ b/src/scss/new-memory/step-6-military.scss
@@ -20,6 +20,7 @@
 .military-created-info {
 	width: 100%;
 	max-width: 300px;
+	font-family: 'UAF Memory', serif;
 	color: $light-white;
 	padding: 20px 30px;
 	margin-bottom: 20px;
