upd: header; steps progress save header button.

--- a/src/scss/new-memory/step-1.scss
+++ b/src/scss/new-memory/step-1.scss
@@ -1,7 +1,8 @@
 body.memory-page-theme-military {
+	.header-langs,
 	#new-memory-step-1 .new-memory-step-desc,
 	.new-memory-langs {
-		display: none
+		display: none !important
 	}
 }
 
