--- a/src/scss/header/header.scss
+++ b/src/scss/header/header.scss
@@ -24,7 +24,7 @@
 		}
 
 		.header-inner {
-			padding: 20px 0;
+			padding: 16px 0 10px;
 			border-bottom: 1px solid $light-blue;
 
 			@media (min-width: $lg) {
@@ -33,11 +33,11 @@
 		}
 
 		.header-logo {
-			height: 18px;
-			margin: 0 0 0 25px;
+			display: none;
 			z-index: 10;
 
 			@media (min-width: $xl) {
+				display: block;
 				height: 68px;
 				margin: 0 auto
 			}
