--- a/src/scss/new-memory/step-3.scss
+++ b/src/scss/new-memory/step-3.scss
@@ -25,6 +25,7 @@
 			font-family: $ff;
 			background-color: transparent;
 			border: none;
+			border-radius: 0;
 			resize: none;
 			padding: 0;
 			box-shadow: none
