upd: military card preview; military font-family variable.

--- a/src/scss/components/cards/memory-page/_thumb.scss
+++ b/src/scss/components/cards/memory-page/_thumb.scss
@@ -55,4 +55,8 @@
 	&.black .memory-card-thumb::after {
 		background: $card-overlay-black
 	}
+
+	&.military .memory-card-thumb::after {
+		background: $card-overlay-military
+	}
 }
