--- a/src/scss/components/vars/_fonts.scss
+++ b/src/scss/components/vars/_fonts.scss
@@ -1,5 +1,6 @@
 $ff			: 'Grafita-Normal', Arial, sans-serif;
 $ff-title	: 'Calvino Grande', Arial, sans-serif;
+$ff-military: 'UAF Memory', Arial, sans-serif;
 
 $fs-xs		: 12px;
 $fs-xs-alt	: 13px;
