--- a/src/scss/new-memory/step-3-military.scss
+++ b/src/scss/new-memory/step-3-military.scss
@@ -390,7 +390,7 @@
 		width: 100%;
 		max-width: 221px;
 		align-self: flex-start;
-		font-family: 'UAF Memory', serif;
+		font-family: $ff-military;
 		font-size: 24px;
 		line-height: $lh-mobile-title-special-lg;
 		color: $military;
