fix: memories author.

--- a/src/scss/pages/memory.scss
+++ b/src/scss/pages/memory.scss
@@ -510,6 +510,7 @@ body.single-memory_page {
 				}
 
 				&.single-col {
+					width: 100%;
 					padding-top: 0;
 
 					.single-memory-memories-item {
