--- a/src/scss/pages/profile.scss
+++ b/src/scss/pages/profile.scss
@@ -17,6 +17,7 @@
 
 	&-body,
 	.expand-page {
+		align-self: flex-start;
 		width: 100%;
 		padding: 16px;
 
@@ -297,7 +298,29 @@
 
 	&-footer {
 		padding-top: 24px;
-		margin-top: auto
+		margin-top: auto;
+
+		&-info {
+			display: flex;
+			flex-direction: column;
+			margin-top: 32px;
+			align-items: center;
+			padding-top: 17px
+		}
+
+		.footer-copyright {
+			text-align: center;
+			margin-bottom: 8px
+		}
+
+		&-by {
+			margin-top: 20px;
+
+			img {
+				width: auto;
+				height: 20px
+			}
+		}
 	}
 
 	.header-menu-button {
