--- a/src/scss/components/cards/memory-page/card.scss
+++ b/src/scss/components/cards/memory-page/card.scss
@@ -34,7 +34,8 @@
 		@include desktop-title-special;
 		color: $text-primary-on-color;
 		text-align: center;
-		transform: translateY(-5px)
+		transform: translateY(-5px);
+		word-break: break-word
 	}
 
 	&-dates {
