feat: add Order Now popup for the Memory Page creation process.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,7 @@
 @import 'components/notifications';
 @import 'components/switcher/switcher';
 @import 'components/popup/popup';
+@import 'components/animations';
 
 // Theme common styles.
 @import 'header/header';
