--- a/src/scss/pages/new-memory.scss
+++ b/src/scss/pages/new-memory.scss
@@ -15,6 +15,7 @@
 @import '../new-memory/step-5';
 @import '../new-memory/step-6';
 @import '../new-memory/step-6-military';
+@import '../new-memory/order-now';
 
 body.memory-page-theme-military {
 	#new-memory-step-2,
