upd: rewards breadcrumb click.

--- a/src/scss/new-memory/step-3-military.scss
+++ b/src/scss/new-memory/step-3-military.scss
@@ -94,6 +94,10 @@
 					border-radius: 50%;
 					background-color: $text-secondary
 				}
+
+				&:not(.active) {
+					cursor: pointer
+				}
 			}
 		}
 	}
