--- a/src/scss/pages/new-memory.scss
+++ b/src/scss/pages/new-memory.scss
@@ -6,6 +6,7 @@
 @import '../new-memory/step-0';
 
 @import '../../../node_modules/cropperjs/dist/cropper.min';
+@import '../../../node_modules/js-datepicker/src/datepicker';
 @import '../new-memory/step-1';
 @import '../new-memory/step-2';
 @import '../new-memory/step-2-military';
