--- a/src/scss/pages/memory.scss
+++ b/src/scss/pages/memory.scss
@@ -2400,6 +2400,7 @@ body.single-memory_page.military
 				font-size: 14px !important;
 				line-height: 18px;
 				padding-top: 12px;
+				align-items: center;
 			}
 
 		}
