--- a/src/scss/footer/footer.scss
+++ b/src/scss/footer/footer.scss
@@ -2,12 +2,41 @@
 	background-color: $black;
 
 	&-top {
-		flex-direction: column;
+		flex-direction: row;
 		padding: 30px 0;
+		align-items: baseline;
+    	justify-content: space-between;
 
-		@media (min-width: $md) {
-			flex-direction: row;
-			padding: 69px 0
+		@media (max-width: 1319px) {
+			padding: 69px 0;
+			justify-content: center;
+			display: flex;
+        	flex-direction: column;
+			align-items: center;
+		}
+	}
+
+	&-nav{
+		@media (max-width: 1319px) {
+			display: flex;
+			justify-content: space-between;
+			margin: auto;
+		}
+
+		@media (max-width: 991px) {
+			.menu{
+				justify-content: center;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				gap: 30px;
+
+				li{
+					margin: auto !important;
+					text-align: center;
+					padding: 0px !important;
+				}
+			}
 		}
 	}
 
@@ -23,13 +52,27 @@
 		img {
 			width: 100%
 		}
+
+		@media (max-width: 1319px) {
+			margin-bottom: 20px;
+		}
+
+		@media (max-width: 991px) {
+			margin-bottom: 63px;
+		}
 	}
 
 	&-links {
 		margin-top: 20px;
 
-		@media (min-width: $md) {
-			margin: 0 0 0 auto
+		@media (max-width: 1319px) {
+			// margin: 0 0 0 auto
+			align-items: center;
+			
+		}
+
+		@media (max-width: 991px) {
+			margin-top: 64px;
 		}
 	}
 
@@ -62,6 +105,10 @@
 		@media (min-width: $md) {
 			flex-direction: row
 		}
+
+		@media (max-width: 991px) {
+			flex-direction: column;
+		}
 	}
 
 	&-copyright {
@@ -70,6 +117,7 @@
 		color: $bright-yellow
 	}
 }
+
 
 body {
 	&.black {
