--- a/src/scss/footer/menu.scss
+++ b/src/scss/footer/menu.scss
@@ -11,7 +11,7 @@
 		.menu {
 			display: flex;
 			flex-direction: column;
-			margin-top: 20px;
+			// margin-top: 20px;
 
 			@media (min-width: $md) {
 				margin-top: 0;
