--- a/src/scss/components/base/base.scss
+++ b/src/scss/components/base/base.scss
@@ -188,3 +188,106 @@ ul {
 		}
 	}
 }
+
+.create-new-memory-container{
+	padding: 60px 80px;
+	border-radius: 30px;
+	max-width: 635px;
+	margin: auto;
+	background: #FFFFFF;
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+
+	@media screen and (max-width:550px) and (min-width:361px) {
+		padding: 30px 40px;
+	}
+
+	@media screen and (max-width:360px) {
+		padding: 20px 20px;
+	}
+
+	.profile-memories-title{
+		margin-bottom: 20px !important;
+	}
+
+	.profile-memories-note{
+		margin-bottom: 30px;
+	}
+
+	.memory-form{
+		.flex{
+			.bottom-form-block{
+				display: flex;
+				gap: 20px;
+				width: 100%;
+				flex-direction: row;
+				align-items: center;
+				justify-content: space-between;
+			}
+
+			@media screen and (max-width:590px) {
+				.bottom-form-block{
+					flex-direction: column;
+					gap: 0px;
+				}
+			}
+		}
+	}
+
+	.memory-form-btn{
+		width: 100%;
+		margin-top: 24px;
+	}
+}
+
+.memories-form-page{
+	padding: 100px 40px 30px 40px !important;
+	.profile-memories-inner{
+		margin:auto !important;
+	}
+
+	@media screen and (max-width:450px) {
+		padding: 100px 20px 30px 20px !important;
+	}
+
+	@media screen and (max-width:360px) {
+		padding: 100px 10px 30px 10px !important;
+	}
+}
+
+.profile-memmories-title-without-text{
+	margin: auto !important;
+}
+
+.contact-btn-custom {
+	position: fixed;
+	top: 50%;
+	right: -80px;
+	transform: translateY(-50%) rotate(-90deg);
+	transform-origin: center center;
+	padding: 0 15px;
+	background-color: rgb(1, 28, 26);
+	color: rgb(255, 255, 255);
+	border: none;
+	cursor: pointer;
+	font-size: 16px;
+	font-weight: 600;
+	line-height: 30px;
+	height: 34px;
+	border-radius: 5px 5px 0 0;
+	box-shadow: 0 0 3px #9b9b9b;
+	user-select: none;
+	white-space: nowrap;
+	-webkit-font-smoothing: antialiased;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Open Sans, Helvetica Neue, sans-serif;
+	text-align: center;
+	-webkit-appearance: none;
+	transition: transform 0.15s ease-in-out;
+	margin: 0 10px;
+	z-index: 9999;
+}
+
+.contact-btn-custom:hover {
+	transform: translateY(-50%) rotate(-90deg) scale(1.05);
+}
