fix: extended date formats, styles for bio block

--- a/src/scss/pages/memory.scss
+++ b/src/scss/pages/memory.scss
@@ -1334,7 +1334,7 @@ body.single-memory_page.military
 
 		@media (min-width: $md)
 		{
-			padding: 0 0 20px;
+			padding: 100px 0 20px;
 		}
 
 		@media (max-width: 750px)
