upd: lending payment flow

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,3 +25,7 @@
 // New Components styles.
 @import 'components/menu/menu';
 @import 'components/socials/socials';
+
+@import 'payment/footer.scss';
+@import 'payment/header.scss';
+@import 'payment/main.scss';
