--- a/src/scss/payment/footer.scss
+++ b/src/scss/payment/footer.scss
@@ -6,7 +6,7 @@
     .payment-footer-inner{
         display: flex;
         flex-direction: row;
-        justify-content: start;
+        justify-content: flex-start;
         align-items: center;
 
         color: #2D4443;
