--- a/src/scss/footer/footer.scss
+++ b/src/scss/footer/footer.scss
@@ -208,3 +208,97 @@ body {
 		}
 	}
 }
+
+@media screen and (max-width:1320px) {
+	.footer-top{
+		padding: 30px 0px !important;
+	}
+}
+
+@media screen and (max-width:991px) {
+	.footer-logo{
+		margin-bottom: 30px !important;
+	}
+
+	.footer-nav{
+		.menu{
+			gap: 10px !important;
+		}
+	}
+
+	.footer-links{
+		margin-top: 30px !important;
+	}
+}
+
+.footer-nav{
+	margin: 0px 0px !important;
+
+	.menu{
+		.head-item{
+			a{
+				svg{
+					margin-right: 5px;
+				}
+			}
+		}
+
+		.last-item{
+			a{
+				direction: rtl;
+				color: #c3dae2 !important;
+				transition: opacity .2s;
+				svg{
+					margin-left: 5px;
+				}
+			}
+		}
+
+		.last-item:hover{
+			a{
+				opacity: .8;
+			}
+		}
+	}
+}
+.custom-dropdown {
+	position: relative;
+}
+
+.custom-dropdown > .sub-menu {
+	opacity: 0;
+	visibility: hidden;
+	transform: translateY(-10px);
+	transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s ease;
+
+	position: absolute;
+	top: -60px;
+	left: 0;
+	background: #fff;
+	box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+	min-width: 150px;
+	z-index: 999;
+	border-radius: 15px;
+	overflow: hidden;
+
+	li {
+		margin: 0 auto !important;
+		text-align: start;
+
+		a {
+			color: black !important;
+			padding: 10px 20px;
+			display: block;
+		}
+	}
+
+	li:hover {
+		background: lightgray;
+	}
+}
+
+.custom-dropdown:hover > .sub-menu {
+	opacity: 1;
+	visibility: visible;
+	transform: translateY(0);
+}
