--- a/src/scss/new-memory/step-0.scss
+++ b/src/scss/new-memory/step-0.scss
@@ -188,10 +188,23 @@
 			max-height: 120px !important;
 			width: 100% !important;
 			height: 100% !important;
-			overflow: hidden;
 			align-items: center;
 			display: flex;
 			border-radius: 33px;
+		}
+
+		.new-memory-themes-right-mobile, .new-memory-themes-mobile{
+				.new-memory-theme::before {
+					content: "";
+						position: absolute !important;
+						top: -3.5px !important;
+						left: -3.5px !important;
+						width: calc(100% + 5px) !important;
+						height: calc(100% + 4px) !important;
+						border: 1px solid #c69a39;
+						border-radius: 35px !important;
+						pointer-events: none;
+				}
 		}
 	}
 
